CSS/menu.css
/*OK THE LESSON LEARNED HERE IS TO GET YOUR MENU DROP DOWNS TO ALIGN CORRECTLY YOU NEED TO REMOVE THE MARGIN AND PADDING
FROM THE UL AND LI AND ADD IT TO THE PADDING STYLE TO THE HYPERLINKS OR A SPAN OF TEXT INSIDE THE LI ITEM. SPENT HOURS
TRYING TO FIND A MORE FLUID SOLUTION TO THIS BUT CANNOT.*/

body, html {
	margin: 0;
	font-family: sans-serif;
}

nav ul {
	padding: 0;
	margin: 0;
	list-style: none;
}

nav li {
	padding: 0px;
	background-color: lightgreen;
}

nav a {
	text-decoration: none; /*removes the underline in the hyperlinks*/
	display: inline-block; /*allows width specification, with the default display:inline width doesn't work*/
	/*width: 120px;  if you want specify a width for the displayed menu bar*/
	padding: 10px;
	line-height: 40px; /*same as height to center the text vertically*/
	

	border: 1px solid black;
	margin-bottom: -1px;
	margin-right: -1px;
}

nav li ul a {
	width: 150px;
}

nav li ul { /*for any ul that is a decendant of a list element*/
	display: none;
}

/*the main horizontal navigation bar list items*/
nav > ul > li {
	display: inline-block;
	float: left; /*without this every drop down menu aligns with the left edge of the nav bar, despite my display: inline, probably the way lists display*/

}

nav li:hover > ul {
	display: block; /*gives the menu drop down vertical separation (carriage returns on each element)*/
}

nav li > ul > li:hover > ul { /*hover on any menu tierfrom drop downs on*/
	display: inline;
}

nav ul > li > ul { /*position of any menu tier from drop downs on*/
	 position: absolute; /*absolute positioning so that menus dont alter other elements positioning*/
}

nav li:hover {
	background-color: lightyellow;
}

header + * {
	clear: left;
}

